# JZLog

./: CMakeLists.txt  License.txt  README.md
demo/: CMakeLists.txt  main.cpp
include/: JZLog.h
src/: README.md  make-glog.sh
src/JZLog/: CMakeLists.txt  JZCLogLibrary.cpp  JZCLogLibrary.h  JZLog.h
src/glog/src/: logging.cc
src/glog/src/glog/: log_severity.h  logging.h.in
src/glog/src/windows/glog/: log_severity.h  logging.h
src/include/glog/: logging.h
src/lib/: glog.lib  glogd.lib
